feat: S3로직 Validate 추가 및 로직 변경 (수정예정)